codepkg/objects/Univercity__c.object
<CustomObject>
    <fields>
        <fullName>EmployeeAmount__c</fullName>
        <label>EmployeeAmount</label>
        <summaryForeignKey>Employee__c.University__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rector</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Univercities</relationshipLabel>
        <relationshipName>Univercities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_Amount__c</fullName>
        <label>Student Amount</label>
        <summaryForeignKey>Student__c.University__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_Of_Education_Cost__c</fullName>
        <label>Sum Of Education Cost</label>
        <summarizedField>Student__c.Cost_of_education__c</summarizedField>
        <summaryForeignKey>Student__c.University__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_Of_Staff_Salary__c</fullName>
        <label>Sum Of Staff Salary</label>
        <summarizedField>Employee__c.Salary_Amount__c</summarizedField>
        <summaryForeignKey>Employee__c.University__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_Of__c</fullName>
        <label>Sum Of Scolarships</label>
        <summarizedField>Student__c.Scholarship__c</summarizedField>
        <summaryForeignKey>Student__c.University__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Profit__c</fullName>
        <formula>Sum_Of_Education_Cost__c  -  Sum_Of__c  -  Sum_Of_Staff_Salary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>University</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Univercity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Univercities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>